<resources>
    <string name="app_name">RoommateFinder</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Log in</string>
    <string name="btn_sign_in">Already have an account? Sign in</string>
    <string name="btn_sign_up">New user? Create Account</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="logo_description">Logo</string>
    <string name="hint_firstName">First Name</string>
    <string name="hint_lastName">Last Name</string>
    <string name="radio_label_male">Male</string>
    <string name="radio_label_female">Female</string>
    <string name="label_gender">Gender</string>
    <string name="title_profile">Personal Profile</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_birthday">Birthday(MM/DD/YYYY)</string>
    <string name="str_professional">Professional</string>
    <string name="str_student">Student</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="looking_for">Looking For</string>
    <string name="str_bio">Bio</string>
    <string name="str_gender">Gender</string>
    <string name="label_lifestyle_preferences">Lifestyle Preferences</string>
    <string name="str_food">Food</string>
    <string name="str_veg">Veg</string>
    <string name="str_non_veg">Non-veg</string>
    <string name="str_smoke">Smoke</string>
    <string name="str_occasional">Occasional</string>
    <string name="str_alcohol">Alcohol</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="shared_cooking">Shared Cooking</string>
    <string name="str_cleanliness">Cleanliness</string>
    <string name="str_loudness">Loudness</string>
    <string name="str_visitor">Visitor</string>
    <string name="bed_time">Bed Time</string>
    <string name="wakeup_time">Wakeup time</string>
    <string name="str_location">Location</string>
    <string name="pick_a_location">Pick a location...</string>
    <string name="str_distance">Distance</string>
    <string name="str_budget">Budget</string>
    <string name="within_miles">within miles</string>
    <string name="min_budget">Min Budget</string>
    <string name="max_budget">Max Budget</string>
    <string name="label_profile_category">I am a</string>
    <string name="error_no_connection">Please check your internet connectivity!</string>
    <string name="error_authentication_failed">Authentication failed.</string>
    <string name="success_authentication">Authentication successful.</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_home">Find Roommates</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_signout">Log Out</string>
    <string name="label_account">Account</string>
    <string name="action_sign_out">Log Out</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">We will send an email to your registered email address for the instructions for resetting your password.</string>
    <string name="action_save">Save</string>
    <string name="error_saving_data">Error saving data :</string>
    <string name="lifestyle_preferences">Lifestyle Preferences</string>
    <string name="label_profile">Profile</string>
    <string name="label_housing_preferences">Housing Preferences</string>
    <string name="no_filter_result">No Roommate found. Please set filters.</string>
    <string name="applyFilter">Apply Filter</string>
    <string name="reset">Clear</string>
    <string name="profile">Profile</string>
    <string name="any">Any</string>
    <string name="message_filters_saved">Filters Saved</string>

    <string name="place_id">placeID</string>
    <string name="search_radius">searchRadius</string>
    <string name="min_Budget">minBudget</string>
    <string name="max_Budget">maxBudget</string>
    <string name="room_type">roomType</string>
    <string name="cleanliness_scale">cleanlinessScale</string>
    <string name="loudness_scale">loudnessScale</string>
    <string name="visitor_scale">visitorScale</string>
    <string name="bed_Time">bedTime</string>
    <string name="wakeup_Time">wakeupTime</string>
    <string name="food">foodPref</string>
    <string name="smoke">smokePref</string>
    <string name="alcohol">alcoholPref</string>
    <string name="pet_Friendly">petFriendlyPref</string>
    <string name="shared_cook">sharedCookingPref</string>
    <string name="title_maximum_budget">Maximum Budget : $</string>
    <string name="noMaxBudget">Budget: N/A</string>
    <string name="label_miles">Miles</string>
    <string name="dollar_sign">$</string>
    <string name="action_send_email">Send Query</string>
    <string name="emailSubject">Roommate Inquiry</string>
    <string name="emailBody">Hi, I really liked your profile. It aligns with my interests very well. Could you please check out my profile? I would love yo connect with you.</string>
    <string name="emailMailtoHeader">mailto:</string>
    <string name="emailSubjectHeader">&amp;subject=</string>
    <string name="emailBodyHeader">&amp;body=</string>
    <string name="messageWaitForResults">Please wait while the results are loaded..</string>
    <string name="label_search_profile">Search Profile</string>
</resources>
