<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/label_profile" />


        <item
            android:id="@+id/nav_housing"
            android:icon="@drawable/ic_menu_housing"
            android:title="@string/label_housing_preferences" />

        <item
            android:id="@+id/nav_lifestyle"
            android:icon="@drawable/ic_menu_lifestyle"
            android:title="@string/label_lifestyle_preferences" />

    </group>

    <item android:title="@string/label_account">
        <menu>
            <item
                android:id="@+id/nav_logoff"
                android:icon="@drawable/ic_menu_log_off"
                android:title="@string/action_sign_out" />
        </menu>
    </item>

</menu>
