<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:id="@+id/linButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:weightSum="2"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <Button
            android:id="@+id/saveFilterButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDarkColor"
            android:text="@string/action_save"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:textStyle="bold" />
        <View
            android:layout_width="10dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/resetButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/colorButtonNormal"
            android:text="@string/reset"
            android:textColor="@color/primaryDarkColor"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_gender"
                android:text="@string/str_gender"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_male"/>

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_female"/>
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="18dp">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_category"
                android:text="@string/label_profile_category"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_student"/>

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_professional"/>

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any"/>
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_smoking_rooms_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/str_smoke"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgSearchSmoke">

                <RadioButton
                    android:id="@+id/rbSearchSmokeYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_yes"/>

                <RadioButton
                    android:id="@+id/rbSearchSmokeNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_no"/>

                <RadioButton
                    android:id="@+id/rbSearchSmokeOccasional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_occasional"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_local_bar_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/str_alcohol"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgSearchAlcohol">

                <RadioButton
                    android:id="@+id/rbSearchAlcoholYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_yes"/>

                <RadioButton
                    android:id="@+id/rbSearchAlcoholNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_no"/>

                <RadioButton
                    android:id="@+id/rbSearchAlcoholOccasional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_occasional"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_pets_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/pet_friendly"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rgSearchPet">

                <RadioButton
                    android:id="@+id/rbSearchPetYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_yes"/>

                <RadioButton
                    android:id="@+id/rbSearchPetNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_no"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_blur_on_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/str_cleanliness"/>

            <SeekBar
                android:id="@+id/sbSearchCleanliness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:max="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_transfer_within_a_station_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/str_visitor"/>

            <SeekBar
                android:id="@+id/sbSearchVisitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:max="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_record_voice_over_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/str_loudness"/>

            <SeekBar
                android:id="@+id/sbSearchLoudness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:max="10"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bed_time"
                android:id="@+id/etSearchBedTime"
                android:drawablePadding="5dp"
                android:drawableStart="@android:drawable/ic_lock_idle_alarm"
                android:inputType="time"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wakeup_time"
                android:id="@+id/etSearchWakeupTime"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_wb_sunny_black_24dp"
                android:inputType="time"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    </ScrollView>
</LinearLayout>
