<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/titleProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/title_profile"
                android:textSize="30sp">

            </TextView>


            <ImageView
                android:id="@+id/avatar"
                android:layout_width="@dimen/logo_w_h"
                android:layout_height="@dimen/logo_w_h"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                app:srcCompat="@drawable/default_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/FloatingLabel">

                    <EditText
                        android:id="@+id/firstName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_firstName"
                        android:imeOptions="actionNext"
                        android:inputType="textPersonName"
                        android:visibility="visible"
                        android:singleLine="true"
                        android:background="@drawable/edit_text_border"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/lastName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/hint_lastName"
                        android:inputType="textPersonName"
                        android:visibility="visible"
                        android:singleLine="true"
                        android:background="@drawable/edit_text_border"
                        android:textColor="@android:color/black" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/labelGender"
                    android:layout_width="87dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center"
                    android:text="@string/label_gender"
                    android:textSize="18sp">

                </TextView>

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_label_female"
                        android:textSize="16dp" />

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/radio_label_male"
                        android:textSize="16dp" />
                </RadioGroup>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_birthday"
                    />

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelProfileCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:text="@string/label_profile_category" />

                <RadioGroup
                    android:id="@+id/rgProfileCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioProfileStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_student" />

                    <RadioButton
                        android:id="@+id/radioProfileProfessional"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/str_professional" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/looking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/looking_for"/>

                <ToggleButton
                    android:id="@+id/toggleButtonLooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textOff="@string/str_no"
                    android:textOn="@string/str_yes"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/labelProfileBio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_bio"/>

                <EditText
                    android:id="@+id/profileBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>
            </LinearLayout>

            <Button
                android:id="@+id/saveProfileButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/primaryDarkColor"
                android:text="@string/action_save"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
